Tornament Fix, added player skills saving